[package]
name = "eth-keystore"
version = "0.5.0"
authors = ["Rohit Narurkar <rohit.narurkar@protonmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A minimalist library to interact with encrypted JSON keystores"
documentation = "https://docs.rs/eth-keystore"
repository = "https://github.com/roynalnaruto/eth-keystore-rs"
readme = "README.md"
keywords = ["ethereum", "web3", "wallet"]
exclude = ["tests/test-keys/*"]

[dependencies]
aes = "0.8.4"
ctr = "0.9.2"
digest = "0.10.7"
hex = "0.4.3"
hmac = "0.12.1"
pbkdf2 = { version = "0.12.2", default-features = false }
rand = "0.9.2"
scrypt = { version = "0.11.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
sha3 = "0.10.8"
thiserror = { version = "2.0.17", default-features = false }
uuid = { version = "1.0", features = ["serde", "v4"] }
serde_with = { version = "3.14.1", features = ["hex"] }

# feature = "geth-compat"
ethereum-types = { version = "0.16.0", optional = true }
k256 = { version = "0.13.4", optional = true }

# feature = "v4"
blst = { version = "0.3.16", optional = true }

[features]
default = ["v3"]
geth-compat = ["ethereum-types", "k256", "k256/ecdsa"]
v3 = []
v4 = ["blst"]
